# anki_deck_from_text

./: .gitignore  LICENSE  README.md  TODOs.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: ci-tests.yml  deploy-docs.yml  publish-on-release-poetry.yml
docs/: changelog.md  contributing.md  index.md  installation.md
docs/api/: cli.md  generate_deck.md  index.md  models.md  parse_input.md
docs/guide/: card-types.md  cli-usage.md  examples.md  input-format.md
src/anki_deck_from_text/: cli.py  generate_deck.py  models.py  parse_input.py
tests/: conftest.py  test_cli.py  test_generate_deck.py  test_md.md  test_models.py  test_parse_input.py  test_txt.txt  test_txt_ascii.txt
tests/test_data/: txt_latin1.txt
