[tool.poetry]
name = "anki_deck_from_text"
version = "0.1.3"
description = "Generate an Anki deck from annotations on a text file"
authors = ["AndreMacedo88 <andre.lopes.macedo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
genanki = "^0.13.1"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
autopep8 = "^2.0.4"
pytest = "^7.4.3"

[tool.poetry.scripts]
anki_deck_from_text = "anki_deck_from_text.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
