[tool.poetry]
name = "anki_deck_from_text"
version = "1.3.5"
description = "Generate an Anki deck from annotations on a text file"
authors = ["Andre Macedo <andre.lopes.macedo@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/AndreMacedo88/anki_deck_from_text"
keywords = ["anki", "flashcards", "deck", "language-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.12"
genanki = "^0.13.1"
click = "^8.1.7"
chardet = "^5.2.0"


[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
autopep8 = "^2.0.4"
pytest = "^7.4.3"

[tool.poetry.scripts]
anki_deck_from_text = "anki_deck_from_text.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
